# irdest

./: Cargo.toml  README.md
ci/pipeline-scripts/: rust-components-ci.yml
clients/android-vpn/: .gitignore
clients/android-vpn/app/: build.gradle
clients/android-vpn/app/src/main/java/org/irdest/IrdestVPN/: MainActivity.kt  Ratmand.kt
clients/irdest-proxy/: Cargo.toml
clients/irdest-proxy/src/: config.rs  main.rs  server.rs
netmods/netmod-inet/: Cargo.toml  README.md
netmods/netmod-inet/src/: error.rs  io.rs  lib.rs  peer.rs  proto.rs  ptr.rs  resolve.rs  routes.rs  server.rs
nix/: default.nix
ratman/: Cargo.toml  shell-deps.nix
ratman/dashboard/: shell-deps.nix
ratman/lib-client/: Cargo.toml
ratman/src/: api.proto
ratman/src/core/: switch.rs
ratman/src/daemon/: mod.rs  parse.rs  peers.rs
ratman/tests/: tcp_networking.rs
ratman/types/: Cargo.toml  build.rs  shell-deps.nix
ratman/types/src/: api.rs  error.rs  lib.rs  message.rs
tests/: shell-deps.nix
tests/multi/: recv.sh  router.sh  router2.sh  send.sh
