# SPDX-FileCopyrightText: 2019-2022 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later WITH LicenseRef-AppStore

[package]
name = "ratman-types"
description = "Encoding types for the Ratman API"
version = "0.3.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
async-std = "1.0"
byteorder = "1.0"
protobuf = "2.19"
ratman-identity = { version ="0.6", path = "../identity", features = ["random"] }
thiserror = "1.0"

[build-dependencies]
protoc-rust = "2.19"
